--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
+		background: var(--light);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -98,7 +98,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #888;
+		color: var(--textvdark);
 		font-family: "Lato", sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
@@ -134,7 +134,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #777;
+		color: var(--textdark);
 		font-weight: 700;
 		line-height: 1em;
 		margin: 0 0 0.5625em 0;
@@ -203,7 +203,7 @@ input, select, textarea {
 	code {
 		background: #555;
 		border-radius: 5px;
-		color: #fff;
+		color: var(--light);
 		font-family: "Source Code Pro", monospace;
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -1863,7 +1863,7 @@ input, select, textarea {
 
 		select option {
 			color: #777;
-			background: #fff;
+			background: #;
 		}
 
 		select:focus::-ms-value {
@@ -1947,7 +1947,7 @@ input, select, textarea {
 		input[type="radio"]:checked + label:before {
 			background: #989898;
 			border-color: #989898;
-			color: #ffffff;
+			color: var(--light);
 			content: '\f00c';
 		}
 
@@ -2404,7 +2404,7 @@ input, select, textarea {
 			ul.feature-icons li:before {
 				background: #0F084B;
 				border-radius: 100%;
-				color: #ffffff;
+				color: var(--light);
 				display: block;
 				height: 2.5em;
 				left: 0;
@@ -2521,7 +2521,7 @@ input, select, textarea {
 		background-color: #989898;
 		border-radius: 5px;
 		border: 0;
-		color: #ffffff !important;
+		color: var(--light) !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 700;
@@ -2538,7 +2538,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		.button:hover {
 			background-color: #a5a5a5;
-			color: #ffffff !important;
+			color: var(--light) !important;
 		}
 
 		input[type="submit"]:active,
@@ -2619,7 +2619,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		.button.primary {
 			background-color: #0F084B;
-			color: #ffffff !important;
+			color: var(--light) !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2645,7 +2645,7 @@ input, select, textarea {
 		.button:disabled {
 			background-color: #888 !important;
 			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-			color: #fff !important;
+			color: var(--light) !important;
 			cursor: default;
 			opacity: 0.25;
 		}
@@ -2653,7 +2653,7 @@ input, select, textarea {
 /* Features */
 
 	.features article {
-		border-top: solid 3px #f4f4f4;
+		border-top: solid 3px var(--light);
 		margin-bottom: 2.25em;
 		padding-top: 2.25em;
 	}
@@ -2688,8 +2688,8 @@ input, select, textarea {
 /* Header */
 
 	:root{
-		--white: #ffffff;
-		--light: #ffffff;
+		--white: var(--light);
+		--light: #F2F0E3;
 		--med: #26408B;
 		--dark: #0F084B;
 		--verydark: #0D0221;
@@ -2786,7 +2786,7 @@ input, select, textarea {
 
 				#header > footer .icons li a {
 					/* changing the color of the icons in the header*/
-					color: #A6CFD5;
+					color: var(--light);
 				}
 
 		#header > nav {
@@ -2803,7 +2803,7 @@ input, select, textarea {
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px var(--light);
+					border-top: solid 2px var(--dark);
 					display: block;
 					padding: 0;
 				}
@@ -2835,7 +2835,7 @@ input, select, textarea {
 
 	#wrapper {
 		/* color of the background behind the text*/
-		background: var(--white);
+		background: var(--light);
 		padding-right: 23em;
 	}
 
@@ -2843,7 +2843,7 @@ input, select, textarea {
 
 	#main > section {
 		/* the borders between sections*/
-		border-top: solid 6px var(--white);
+		border-top: solid 6px var(--light);
 	}
 
 		#main > section > .container {
@@ -2857,9 +2857,9 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		background: #fafafa;
+		background: var(--dark);
 		border-top: 0;
-		color: #c0c0c0;
+		color: var(--light);
 		overflow: hidden;
 		padding: 4em 0 2em 0;
 	}
@@ -3099,7 +3099,7 @@ input, select, textarea {
 
 					#titleBar .toggle:before {
 						background: #0F084B;
-						color: #ffffff;
+						color: var(--light);
 						content: '\f0c9';
 						display: block;
 						font-size: 16px;
