--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -32,7 +32,6 @@ body {
 	padding-bottom: 80px;
 	padding-left: 80px;
 }
-
 /* Basic Settings */
 
 body {
@@ -58,7 +57,7 @@ body, input, select, textarea, footer, header {
 	padding-right: 80px;
 	padding-bottom: 50px;
 	padding-left: 80px;
-	font-size: 16pt;
+	font-size: 12pt;
 	font-weight: 400;
 	line-height: 1.75em;
 }
@@ -243,10 +242,26 @@ ul.icons {
 	}
 
 small {
+	font-size: 90%;
+}
+
+xsmall {
 	font-size: 70%;
 }
 
 large {
 	font-size: 150%;
 	font-weight: 600;
+}
+
+legacy {
+	font-size: 100%;
+	color: #888888;
+}
+
+.body-link:hover { color: darkmagenta; }
+
+div.main {
+	margin:auto; 
+	max-width: 800px;
 }
