--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -375,9 +375,8 @@ img{
 		margin-top: 15px;
 		margin-bottom: 15px;
 
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
+		text-align: center; 
+		margin: auto;
 		width: 100%;
 	}
 
