--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -72,6 +72,11 @@ body{
 	padding-bottom: 30px;
 }
 
+section.element{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
 p.shifted {
     margin-left: 0px;
 }
@@ -96,9 +101,19 @@ h1 {
 	line-height: 1.5em;
 }
 
+h1.name{
+	text-align: left;
+	white-space: nowrap;
+	font-size: 200%;
+	margin: 0 0 0 0;
+}
+
 h2 {
 	font-size: 1.5em;
 	line-height: 1.5em;
+
+	display: inline;
+
 }
 
 h3 {
@@ -123,6 +138,8 @@ h6 {
 
 p	{
 	color: #657b83;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 
@@ -299,11 +316,14 @@ div.footer{
 	color:  var(--base2);
 	font-size: 140%;
 	page-break-before: always;
-	padding-top: 15px;
+	padding-bottom: 30px;
 	text-align: center;
 
 	position: absolute;
 	bottom: 0;
+
+	background-color: var(--base3);
+
 	width: 100%;
 	height: 2.5rem;
 }
@@ -324,7 +344,12 @@ a.copyright{
 nav {
 	margin:auto;
 	text-align: center;
-	padding-bottom: 20px;
+	padding: 10px;
+
+	position: sticky;
+	top:0;
+
+	background-color: var(--base3);
 }
 
 img{
@@ -341,6 +366,7 @@ img{
 		color:  var(--base2);
 		font-size: 140%;
 		page-break-before: always;
+
 	}
 }
 
@@ -358,6 +384,10 @@ img{
 	nav {
 		margin:auto;
 		text-align: center;
+		position: sticky;
+
+		top:0;
+		background-color: var(--base3);
 	}
 	
 	
