--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -75,6 +75,7 @@ body{
 section.element{
 	margin-top: 10px;
 	margin-bottom: 10px;
+	background-color: var(--base3);
 }
 
 p.shifted {
@@ -331,7 +332,7 @@ div.footer{
 	color:  var(--base2);
 	font-size: 140%;
 	page-break-before: always;
-	padding-bottom: 30px;
+	padding-bottom: 0px;
 	text-align: center;
 
 	position: absolute;
@@ -357,8 +358,6 @@ a.copyright{
 
 
 nav {
-
-	margin:auto;
 	text-align: left;
     padding-top: 10px;
 	padding-bottom: 10px;
@@ -398,9 +397,11 @@ img{
 	}
 
 	nav {
-		margin:auto;
-		text-align: center;
+		text-align: left;
 		position: sticky;
+
+		padding-top: 10px;
+		padding-bottom: 10px;
 
 		top:0;
 		background-color: var(--base3);
