--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -117,11 +117,11 @@ h2 {
 	display: inline;
 
 
-    /*
+    
 	padding: 5px;
 	box-shadow: 4px 4px 0 var(--base02);
 	outline-color: var(--base02);
-	outline-style: solid;*/
+	outline-style: solid;
 
 }
 
