--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.cdnfonts.com/css/menlo');
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
+@import url("https://use.typekit.net/emv3zbo.css");
+@import url("https://fonts.googleapis.com/css?family=Fira Code")
 
 @font-face{
 	font-family: hershey-light;
@@ -21,7 +23,7 @@
 /* defining base colors */
 :root{
 	--white: white;
-	--base03: #001613; /* 002b36 */
+	--base03: #000 ; /* #001613; /* 002b36 */
 	--base02: #073642;
 	--base01: #586e75;
 	--base00: #657b83;
@@ -60,7 +62,7 @@ section, summary, time, mark, audio, video {
 body, input, select, textarea, footer, header {
 	color: var(--white);
 	background-color: var(--base03);
-	font-family: hershey-medium; 
+	font-family: 'Fira Code', sans-serif; 
 	font-size: 20pt;
 	font-weight: 400;
 	line-height: 1.75em;
@@ -136,7 +138,7 @@ a:hover {
 	padding-top: 20px;
 	text-align: center;
 	line-height: 40px;
-	font-size: 20px;
+	font-size: 18px;
 
 
 }
@@ -170,7 +172,7 @@ a:hover {
 	padding-top: 10px;
 
 	width:100%;
-
+	height: 100vh;
 }
 
 /* defining each item within the flexbox */
@@ -179,6 +181,24 @@ a:hover {
 	text-align: left;
 	line-height: 75px;
 	font-size: 30px;
+}
+
+
+/* TEXT FORMATTING */
+
+h1{
+	font-size: 30px;
+	font-weight: 700;
+	background-color: var(--white);
+
+	color: var(--base03);
+
+	padding-left: 10px;
+	padding-right: 10px;
+
+	transform: skewX(-10deg);
+
+	text-align: left;
 }
 
 
