--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
 @import url("https://use.typekit.net/emv3zbo.css");
-@import url("https://fonts.googleapis.com/css?family=Fira Code")
+@import url("https://fonts.googleapis.com/css?family=Fira Code");
 
 @font-face{
 	font-family: hershey-light;
@@ -18,6 +18,11 @@
 	font-family: hershey-heavy;
 	src: url(../webfonts/AVHersheySimplexHeavy.ttf)
 }
+
+html {
+	scroll-behavior: smooth;
+	scroll-margin-top: 100px;
+  }
 
 
 /* defining base colors */
@@ -50,7 +55,7 @@ tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
-	margin: 0;
+	margin: auto;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
@@ -61,19 +66,21 @@ section, summary, time, mark, audio, video {
 
 body, input, select, textarea, footer, header {
 	color: var(--white);
-	background-color: var(--base03);
-	font-family: 'Fira Code', sans-serif; 
+	background-color: #000;
+	font-family: 'Fira Code'; 
 	font-size: 20pt;
 	font-weight: 400;
 	line-height: 1.75em;
 
 	margin:auto; 
-	max-width: 900px;
+	max-width: 100vw;
 }
 
 body{
 	padding-top: 30px;
 	padding-bottom: 30px;
+
+	align-items: center;
 }
 
 
@@ -87,13 +94,13 @@ a {
 
 /* unvisited link */
 a:link {
-	color: var(--textvdark);
-	background-color: transparent;
+	color: var(--black);
+	background-color: none;
 	text-decoration: none;
 }
 
 a:hover {
-	color: var(--textvdark);
+	color: var(--base1);
 	background-color: transparent;
 	text-decoration: none;
 }
@@ -101,20 +108,19 @@ a:hover {
 /* NAV BAR SETTINGS */
 
 .navbar {
+
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	max-width: 100vw;
-
 	justify-content: center;
 
+	position: fixed;
 	top: -100px; /* Hide the navbar 50 px outside of the top view */
-	width: 900px; /* Full width */
 	transition: top 0.3s; /* Transition effect when sliding down (and up) */
-
 	padding-top: 0px;
 
-	position: fixed;
+	max-width: 100vw;
+	width: 100vw; /* Full width */
 
 	box-shadow: 0 5px 0 var(--white);
 	outline-style: solid;
@@ -134,8 +140,10 @@ a:hover {
 
 	color: var(--white);
 	width: 120px;
+	margin: 0;
 	padding: 10px;
 	padding-top: 20px;
+	padding-bottom: 0px;
 	text-align: center;
 	line-height: 40px;
 	font-size: 18px;
@@ -146,41 +154,111 @@ a:hover {
 .navbar a:hover {
 	background-color: #fff;
 	color: var(--base03);
+	/* filter: invert(1); */
 }
 
-/* creating a grid for the main content */
+
+/* creating a grid for the main content: 3 columns, column 1 and 3 are just for spacing. Content is in column 2 */
 .main {
-	padding-top: 20px;
+	padding-top: 10px;
 
 	display: grid;
-	column-count: 1;
-	gap: 10px 10px;
+	column-count: 3;
+	grid-template-columns: 10vw 80vw 10vw;
 
-	margin:auto;
-	max-width: 1000px;
+	gap: 0px 0px;
+
+	width: 100vw;
+
 	position: relative;
 	min-height: 85vh;
+	background-color: #000;
 }
 
 /* defining flexboxes for each row */
 .main > div.row{
 
+	grid-row-start: auto;
+	grid-row-end: auto;
+	grid-column-start: 2;
+	grid-column-end: 2;
+
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 
-	padding-top: 10px;
+	justify-content: flex-start;
+	align-content: top;
+	margin: 0;
 
-	width:100%;
-	height: 100vh;
+	padding: 0;
+
+	width: 80vw;
+	height: calc(100vh - 120px);
+	background-color: none;
 }
+
+/* design for columns, one white one black */
+div.row.white{
+	background-color:#fff;
+	padding-top: 30px;
+}
+
+div.row.black{
+	background-color:#000;
+	padding-top: 30px;
+}
+
+/* between each row, a small break such that navbar doesn't hide the subheadings */
+div.row.break{
+	align-items: center; 
+	justify-content: center; 
+	height: 50px;
+	width: 100vw;
+	grid-column-start: 1;
+	grid-column-end: 3;
+}
+
+
+/* filling in the left and right columns */
+div.row.left{
+	grid-row-start: auto;
+	grid-row-end: auto span 1;
+	grid-column-start: 1;
+	grid-column-end: 1;
+
+	padding-top: 30px;
+	height: calc(100vh - 120px);
+	width: 10vw;
+
+	background-color: #fff;
+}
+
+div.row.right{
+	grid-row-start:inherit;
+	grid-row-end: auto span 1;
+	grid-column-start: 3;
+	grid-column-end: 3;
+
+	padding-top: 30px;
+	height: calc(100vh - 120px);
+	width: 10vw;
+
+	background-color: #fff;
+}
+
+/* might have to add another row element here such that the first one is the background, and the second one actually contains all the content */
 
 /* defining each item within the flexbox */
 .row > div{
-	margin: 5%;
+
+	margin: 0;
+	padding: 0;
 	text-align: left;
 	line-height: 75px;
 	font-size: 30px;
+
+	background-color: inherit;
 }
 
 
@@ -198,9 +276,15 @@ h1{
 
 	transform: skewX(-10deg);
 
-	text-align: left;
+	margin: auto; 
+	height: 80px;
+	width:fit-content;
 }
 
+p{
+	font-size: x-large;
+	padding: 20px;
+}
 
 div.footer{
 	color:  var(--base3);
@@ -235,42 +319,43 @@ a.copyright{
 @media screen and (max-width: 1130px) {
 	body {
 		margin:auto; 
-		max-width: 600px;
+		max-width: 100vw;
+	}
+
+	.main > div.row{
+
+		
+	}
+
+	.row > div{
+
 	}
 }
 
 @media screen and (max-width: 780px) {
 	/* For mobile phones: */
-
-	body {
-		background-color: var(--base03);
-		font-size: 12pt;
-
-		margin:auto; 
-		max-width: 370px;
-	}
-
-	
 }
 
 .blinking-cursor {
+
 	font-weight: 800;
-	font-size: 200%;
-	color: var(--base02);
+	font-size: 100%;
+	color: #fff;
 	margin-left: 0px;
 
-	-webkit-animation: 1s blink step-end infinite;
-	-moz-animation: 1s blink step-end infinite;
-	-ms-animation: 1s blink step-end infinite;
-	-o-animation: 1s blink step-end infinite;
-	animation: 1s blink step-end infinite;
+	-webkit-animation: 3s blink ease-in-out infinite;
+	-moz-animation: 3s blink ease-in-out infinite;
+	-ms-animation: 3s blink ease-in-out infinite;
+	-o-animation: 3s blink ease-in-out infinite;
+	animation: 3s blink ease-in-out infinite;
 }
 
+
 @keyframes blink {
-	from, to {
-		color: transparent;
+	0% {
+		color: #fff;
 	}
 	50% {
-		color: black;
+		color: transparent;
 	}
 }
