--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,7 @@ a:hover {
 	margin: 0;
 	padding: 10px;
 	padding-top: 20px;
-	padding-bottom: 4px;
+	padding-bottom: 10px;
 	text-align: center;
 	line-height: 40px;
 	font-size: 18px;
@@ -154,7 +154,10 @@ a:hover {
 .navbar a:hover {
 	background-color: var(--base3);
 	color: var(--base03);
-	/* filter: invert(1); */
+}
+
+.navbar a:hover img{
+	filter: invert(0.9);
 }
 
 
@@ -187,8 +190,9 @@ a:hover {
 	flex-direction: row;
 	flex-wrap: wrap;
 
-	justify-content: flex-start;
+	justify-content: start;
 	align-content: top;
+
 	margin: 0;
 
 	padding: 0;
@@ -254,16 +258,22 @@ div.row.right{
 	margin: 0;
 	padding: 0;
 	text-align: left;
+
 	line-height: 75px;
 	font-size: 30px;
 
+	margin: 0;
+
 	background-color: inherit;
+
+	height: fit-content;
 }
 
 
 /* TEXT FORMATTING */
 
 h1{
+	
 	font-size: 30px;
 	font-weight: 700;
 	background-color: var(--base3);
@@ -275,9 +285,10 @@ h1{
 
 	transform: skewX(-10deg);
 
-	margin: auto; 
 	height: 80px;
-	width:fit-content;
+	width: fit-content;
+
+	margin-left: 0;
 }
 
 p{
@@ -311,6 +322,10 @@ a.copyright{
 	bottom: 0;
 	width: 100%;
 	height: 2.5rem;
+}
+
+a img{
+	display:block;
 }
 
 
